added keyboard image to be background for password generator project on portfolio

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -81,7 +81,7 @@ form{
 }
 
 #project-box-1{
-    background-image: url('../images/snail2.jpg');
+    background-image: url('../images/keyboard.jpg');
 }
 
 #project-box-2{
