added links to websites and repositories under the boxes

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -109,6 +109,10 @@ form{
     background-image: url('../images/dailymesh.jpg');
 }
 
+#portfolio-text{
+    margin-left: 50px;
+}
+
 .name-banner{
     background-color: #666666;
     border: 2px solid #4aaaa5;
