added projects 6-10 to the portfolio

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -75,7 +75,7 @@ form{
   /*  margin: 10px;  */
 }
 
-#picture-row{
+#picture-row-1{
     padding: 10px;
     margin-left: 50px;
     margin-right: 50px;
